Adicionado som "Epah, cala-te!" Editado bundle dos Memes Adicionado botão de partilhar (partilha do link para a loja do Aptoide) Criação e tradução de strings (no ficheiro string.xml)

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -7,4 +7,7 @@
     <string name="version">Version</string>
     <string name="app_icon">App Icon</string>
     <string name="made">Made by Nuno Martins</string>
+    <string name="action_share">Share</string>
+    <string name="available_at">Available at</string>
+    <string name="sharing">Share via</string>
 </resources>
