Criação das activities de Login e Sign Up

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -9,5 +9,5 @@
     <string name="made">Feito por Nuno Martins</string>
     <string name="action_share">Partilhar</string>
     <string name="available_at">Disponível em</string>
-    <string name="sharing">Share via</string>
+    <string name="sharing">Partilhar via</string>
 </resources>
