--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,17 @@
     <string name="version">Versão</string>
     <string name="app_icon">App Icon</string>
     <string name="made">Feito por Nuno Martins</string>
+
+    <!-- Login Activity -->
+    <string name="title_activity_login">Sign In</string>
+    <string name="email">Email Address</string>
+    <string name="password">Password</string>
+    <string name="forgot_pass">Forgot your password?</string>
+    <string name="login_button">Login</string>
+
+    <!-- Sign Up Activity -->
+    <string name="title_activity_signup">Sign Up</string>
+    <string name="name">Your Name</string>
+    <string name="signup_repeat">Repeat your Password</string>
+    <string name="signup_button">Sign Up</string>
 </resources>
